Trevius: Added SoF Decode/Encode for OP_InspectAnswer.  SoF clients can now inspect Titanium clients and everything shows up properly.  SoF clients still cannot be inspected at all by either client.
Derision: Fix for armor not showing to other player's after looting your corpse.
Derision: Call of the Hero should no longer transfer aggro to the caster.
LeftRoad: Implemented /pet leader command.

==01/23/2010==
Trevius: Added NPC:ReturnNonQuestNoDropItems rule to enable/disable a new feature that allows all NO DROP items to be returned if turned into a non-item-quest NPC (no EVENT_ITEM).
Trevius: Removed a possible exploit with quest turn-ins.
Derision: Added check for spell target type SummonedPet (e.g. Elemental Draw).
Derision: Implemented /searchcorpse GM command.
Derision: Reset Trade Accepted state if money is added to a trade.
Derision: Shrunk/Grown players/mobs will now appear the correct size to new players entering the zone.
Derision: OP_GuildMemberList for SoF (used to populate Guild Management Window Roster.
Derision: OP_GuildDemote for SoF.
Derision: OP_GuildPublicNote for SoF.
Derision: Corrected message produced when trying to use Suspend Minion on a charmed pet.

Optional SQL: utils/sql/svn/1144_optional_rule_return_nodrop

==01/22/2010==
Trevius: Adjusted quest::wearchange(slot, texture) so it will now show the weapon slot changes to players who zone in after the change has already happened.
Derision: Implemented Secondary Forte AA.

==01/21/2010==
Trevius/Andmetal: Added new Spell Globals system.  Adding spells to the new spell_globals table with a qglobal name and value there will require characters to have the matching qglobal in the quest_globals table in order to scribe spells via the quest::scribespells command. Note: Only integers can be used for values currently.
Trevius: Added EnableSpellGlobals rule to enable/disable the new Spell Globals system.